--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
-    <title>iNoteBook - Your data is secured in cloud</title>
+    <title>Inventory Mangement System - Your data is secured in cloud</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
